--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fm-template",
+  "name": "fm-4-huddle-landing-page-with-curved-sections",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
