--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.445",
     "@sveltejs/adapter-static": "1.0.0-next.21",
     "@sveltejs/kit": "1.0.0-next.201",
     "autoprefixer": "^10.3.7",
@@ -14,7 +15,8 @@
     "postcss-load-config": "^3.1.0",
     "svelte": "^3.44.0",
     "svelte-preprocess": "^4.9.8",
-    "tailwindcss": "^3.0.1"
+    "tailwindcss": "^3.0.1",
+    "unplugin-icons": "^0.12.23"
   },
   "type": "module"
 }
